--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/ngrok": "^4.1.3",
     "@react-native-firebase/app": "^22.2.1",
     "@react-navigation/elements": "^2.4.3",
     "@react-navigation/native": "^7.1.10",
@@ -19,10 +20,10 @@
     "node": "^20.19.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.3",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native": "0.79.4",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.11.2",
     "react-native-svg-transformer": "^1.5.1",
     "react-native-web": "^0.20.0"
   },
