--- a/package.json
+++ b/package.json
@@ -18,20 +18,21 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "expo": "~53.0.10",
+    "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
     "node": "^20.19.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.3",
+    "react-native": "0.79.5",
     "react-native-maps": "1.20.1",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.11.2",
     "react-native-svg-transformer": "^1.5.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
-    "expo-location": "~18.1.6"
+    "expo-maps": "~0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
