fixed map issue

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.10.0",
     "node": "^20.19.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-native": "0.79.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-maps": "1.20.1",
